tests/ui/mismatched_types/float-literal-inference-restrictions.stderr
error[E0308]: mismatched types
  --> $DIR/float-literal-inference-restrictions.rs:2:18
   |
LL |     let x: f32 = 1;
   |            ---   ^ expected `f32`, found integer
   |            |
   |            expected due to this
   |
help: use a float literal
   |
LL |     let x: f32 = 1.0;
   |                   ++

error[E0308]: mismatched types
  --> $DIR/float-literal-inference-restrictions.rs:3:18
   |
LL |     let y: f32 = 1f64;
   |            ---   ^^^^ expected `f32`, found `f64`
   |            |
   |            expected due to this
   |
help: change the type of the numeric literal from `f64` to `f32`
   |
LL -     let y: f32 = 1f64;
LL +     let y: f32 = 1f32;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
