tests/ui/mismatched_types/float-literal-inference-restrictions.rs
fn main() {
    let x: f32 = 1; //~ ERROR mismatched types
    let y: f32 = 1f64; //~ ERROR mismatched types
}
